Remove from tail list if node is connected or re-enabled

When a node has its output disabled (because of disconnection or a
source finishing), the node is placed on the tail processing list (if
it has a tail).

But when an upstream node is reconnected or otherwise has outputs
enabled, we need to traverse the graph and re-enable all the outputs
and if the node is on the tail processing list, we need to remove it
from the list.  If we don't, then when the tail time comes, the node
will have it's output disabled and nothing will enable it again.

Also, last_non_silent_time_ was incorrectly initialized to -1 instead
of 0, causing tail processing to end 1 sec early in some cases.

Manually verified that test-connections.html fails without this CL
and passes with this CL.  Also verified that the repro case works
with this CL.

Bug: 829767
Test: AudioNode/test-connections.html
Change-Id: I3770806d30fad71c670930cc9427347ede798c90
Reviewed-on: https://chromium-review.googlesource.com/1002734
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549776}
Former-commit-id: 00a02b5ca5fc489867d28ddaa3c8c0b753494cd0